--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -3,24 +3,156 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Home</title>
 </head>
 <body>
-    <form method="post">
-        {% csrf_token %}
-        <select name="food_consumed" id="food_consumed">
-            {% for food in foods %}
-                <option value="{{ food.name }}">{{ food.name }}</option>
-            {% endfor %}
-        </select>
-        <button type="submit">Add</button>
-    </form>
-    
-    {% for c in consumed_food %}
-        {{c.food_consumed.name}} --> {{c.food_consumed.carbs}} --> {{c.food_consumed.protein}} --> {{c.food_consumed.fats}} --> {{c.food_consumed.calories}}<br> 
-    {% endfor %}
 
-        
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <nav class="navbar navbar-dark bg-primary">
+                    <span class="navbar-brand">Calorie Tracker</span>
+                </nav>
+            </div>
+        </div>
+
+        <br><br><br>
+
+        <h4>Calorie Goal</h4>
+        <br>
+        <div class="row">
+            <div class="col-md-9 offset-1">
+                <div class="progress">
+                    <div class="progress-bar b-success" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0"></div>
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <div class="row">
+            <div class="col-md-12">
+                <form method="post">
+                    <div class="form-group row">                    
+                        {% csrf_token %}
+                        <label class="col-md-2">
+                            <b>Select Food to Add</b>
+                        </label>
+                        <select class="col-md-6 form-control" name="food_consumed" id="food_consumed">
+                            {% for food in foods %}
+                                <option value="{{ food.name }}">{{ food.name }}</option>
+                            {% endfor %}
+                        </select>
+                        <button class="btn btn-success" type="submit">Add</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-7">
+                <div>
+                    <h4>
+                        Today's Consumption
+                    </h4>
+                </div>
+                <table id="table" class="table table-striped table-primary">
+                    <tr class="bg-primary text-white">
+                        <th>Food Item</th>
+                        <th>Carbs(gm)</th>
+                        <th>Protein(gm)</th>
+                        <th>Fats(gm)</th>
+                        <th>Calories(Kcal)</th>
+                        <th>Remove Item</th>
+                    </tr>
+                    {% for c in consumed_food %}
+                    <tr>
+                        <td>{{c.food_consumed.name}}</td>
+                        <td>{{c.food_consumed.carbs}}</td>
+                        <td>{{c.food_consumed.protein}}</td>
+                        <td>{{c.food_consumed.fats}}</td>
+                        <td>{{c.food_consumed.calories}}</td>
+                        <td><a class="btn btn-danger" href="{% url 'delete' c.id %}">X</a></td>
+                    </tr>
+                    {% endfor %}
+                    <tr>
+                        <td id="name"><b>Total</b></td>
+                        <td id="totalcarbs"><b></b></td>
+                        <td id="totalprotein"><b></b></td>
+                        <td id="totalfats"><b></b></td>
+                        <td id="totalcalories"><b></b></td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="col-md-5">
+                <div class="">
+                    <h4>Today's breakdown</h4>
+                </div>
+                <div class="card-header text-white bg-primary">
+                    <h4>Macronutrients breakdown</h4>
+                </div>
+                <div class="col-md-12">
+                    <div>
+                        <canvas id="myChart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
+<script>
+    var table = document.getElementById('table');
+    var carbs = 0, protein = 0, fats = 0, calories = 0;
+
+    for(var i = 1; i<table.rows.length-1; i++){
+        console.log(table.rows[i].cells[1].innerHTML);
+        carbs += parseFloat(table.rows[i].cells[1].innerHTML);
+        carbs = Math.round(carbs);
+        protein += parseFloat(table.rows[i].cells[2].innerHTML);
+        protein = Math.round(protein);
+        fats += parseFloat(table.rows[i].cells[3].innerHTML);
+        fats = Math.round(fats);
+        calories += parseFloat(table.rows[i].cells[4].innerHTML);
+        calories = Math.round(calories);
+    }
+
+    document.getElementById("totalcarbs").innerHTML = '<b>'+carbs+'(gm)</b>';
+    document.getElementById("totalprotein").innerHTML = '<b>'+protein+'(gm)</b>';
+    document.getElementById("totalfats").innerHTML = '<b>'+fats+'(gm)</b>';
+    document.getElementById("totalcalories").innerHTML = '<b>'+calories+'(kcal)</b>';
+
+    var calPer = (calories/2000)*100;
+    document.getElementsByClassName("progress-bar")[0].setAttribute("style", "width:"+calPer+"%"); 
+
+    var total = carbs + protein + fats;
+    var carbsP = Math.round((carbs/total)*100);
+    var proteinP = Math.round((protein/total)*100);
+    var fatsP = Math.round((fats/total)*100);
+    
+    const ctx = document.getElementById('myChart');
+
+    new Chart(ctx, {
+        type: 'doughnut',
+        data: {
+        labels: ['Carbs '+carbsP+'%', 'Protein '+proteinP+'%', 'Fats '+fatsP+'%'],
+        datasets: [{
+            label: '% of diet',
+            data: [carbsP, proteinP, fatsP],
+            borderWidth: 1
+            }]
+        },
+        options: {
+        scales: {
+        y: {
+          beginAtZero: true
+            }
+        }
+    }
+  });
+
+
+</script>
+
 </html>
