--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -71,7 +71,7 @@
                         <td>{{c.food_consumed.protein}}</td>
                         <td>{{c.food_consumed.fats}}</td>
                         <td>{{c.food_consumed.calories}}</td>
-                        <td><a class="btn btn-danger" href="{% url 'delete' c.id %}">X</a></td>
+                        <td><a class="btn btn-danger" href="{% url 'delete' c.id %}">Remove</a></td>
                     </tr>
                     {% endfor %}
                     <tr>
